agigunta struttura html per la stampa input

--- a/index.html
+++ b/index.html
@@ -1,14 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JS</title>
+    <!-- link bootstrap  -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <!-- link my style  -->
     <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
-    
+    <div class="container-fluid text-center my-5">
+        <div class="row">
+            <div class="col-4">
+                <h2>Nome</h2>
+                <p id="fistName"></p>
+            </div>
+            <div class="col-4">
+                <h2>Cognome</h2>
+                <p id="lastName"></p>
+            </div>
+            <div class="col-4">
+                <h2>Colore preferito</h2>
+                <p id="favColor"></p>
+            </div>
+        </div>
+        <div class="row my-5">
+            <div class="col-12">
+                <h2>Password fantastica</h2>
+                <p id="yourPassword"></p>
+            </div>
+
+        </div>
+    </div>
     <script src="JS/main.js"></script>
 </body>
+
 </html
