visualizzazione a schermo degli input

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="row">
             <div class="col-4">
                 <h2>Nome</h2>
-                <p id="fistName"></p>
+                <p id="firstName"></p>
             </div>
             <div class="col-4">
                 <h2>Cognome</h2>
